--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Простой прогноз погоды с использованием API Open-Meteo." />
+    <meta
+      name="description"
+      content="Простой сервис для отображения прогноза погоды с использованием API Open-Meteo."
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <link
