--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
     <link rel="stylesheet" href="/assets/css/rubik.fontface.css" />
 
-    <title>Kicshikxo weather</title>
+    <title>Kicshikxo Weather</title>
 
     <script src="/assets/js/chart.js"></script>
   </head>
