fix(ui): change input labels

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -28,7 +28,7 @@
     <form id="city-input-form" class="form">
       <div class="input__field">
         <label for="city">Название города</label>
-        <input class="input" name="city" placeholder="Введите название города" required />
+        <input class="input" id="city" name="city" placeholder="Введите название города" required />
       </div>
       <button id="submit-button" class="button" type="submit">Прогноз на 24 часа</button>
     </form>
